[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaces/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 380, 252 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 380, 13 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 380, 20 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 760.0
margin_bottom = 505.0

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="Opponent" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]

[node name="Table" type="Area2D" parent="."]
position = Vector2( 390, 252 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table"]
position = Vector2( -10, 0 )
shape = SubResource( 4 )

[node name="Interface" parent="." instance=ExtResource( 4 )]
margin_right = 760.0
margin_bottom = 505.0

[node name="Up" type="StaticBody2D" parent="."]
position = Vector2( 384, -16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
position = Vector2( -4, 3 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 384, 528 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -4, -4 )
shape = SubResource( 6 )

[connection signal="outTable" from="." to="Player" method="_on_Game_outTable"]
[connection signal="outTable" from="." to="Ball" method="_on_Game_outTable"]
[connection signal="pointOpponent" from="." to="Interface" method="_on_Game_pointOpponent"]
[connection signal="pointPlayer" from="." to="Interface" method="_on_Game_pointPlayer"]
[connection signal="touchDown" from="." to="Ball" method="_on_Game_touchDown"]
[connection signal="touchUp" from="." to="Ball" method="_on_Game_touchUp"]
[connection signal="moreSpeedPlayer" from="Ball" to="Player" method="_on_Ball_moreSpeedPlayer"]
[connection signal="updatePos" from="Ball" to="Opponent" method="_on_Ball_updatePos"]
[connection signal="body_exited" from="Table" to="." method="_on_Table_body_exited"]
[connection signal="exit" from="Interface" to="." method="_on_Interface_exit"]
[connection signal="pause" from="Interface" to="." method="_on_Interface_pause"]
[connection signal="play" from="Interface" to="." method="_on_Interface_play"]
[connection signal="play" from="Interface" to="Ball" method="_on_Interface_play"]
[connection signal="winner" from="Interface" to="." method="_on_Interface_winner"]
